# zombiedash-server

./: .env  .gitignore  Cargo.toml  Rocket.toml  build-windows.sh  log4rs.yml
src/: lib.rs  main.rs
src/data/: connector.rs  db.rs  mod.rs  model.rs  mongo_connection.rs  redis_connection.rs
src/routes/: common.rs  mod.rs  musicplay.rs  player.rs  user.rs  worship.rs
tests/: basic_test.rs  mongodb_test.rs  persistency_test.rs
tests/common/: mod.rs
