[package]
name = "zombiedash-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
mongodb = "2.0.0"
dotenv = "0.15.0"
rand = "0.8.4"
rocket = {version = "0.5.0-rc.1", features = ["json", "uuid"] }
rust-argon2 = "0.8.3"
serde = "1.0.130"
redis = "0.21.2"
log4rs = "1.0.0"
log = "0.4.14"

[dev-dependencies]
lazy_static = "1.4.0"
